[package]
name = "tiny-encrypt"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "A simple and tiny file encrypt tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-stream = "0.2"
base64 = "0.21"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
flate2 = "1.0"
hex = "0.4"
openpgp-card = "0.3"
openpgp-card-pcsc = "0.3"
p256 = { version = "0.13", features = ["pem", "ecdh", "pkcs8"] }
p384 = { version = "0.13", features = ["pem", "ecdh", "pkcs8"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "rustls", "rustls-tls"] }
rpassword = "7.2"
rsa = { version = "0.9", features = ["pem"] }
rust_util = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.4"
simpledateformat = "0.1"
tabled = "0.14"
x25519-dalek = "2.0"
x509-parser = "0.15"
yubikey = { version = "0.8", features = ["untested"] }
zeroize = "1.6"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
panic = 'abort'
strip = true
