[package]
name = "tiny-encrypt"
version = "1.7.6"
edition = "2021"
license = "MIT"
description = "A simple and tiny file encrypt tool"
repository = "https://git.hatter.ink/hatter/tiny-encrypt-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["decrypt", "macos", "smartcard", "secure-enclave"]
decrypt = ["smartcard"]
smartcard = ["openpgp-card", "openpgp-card-pcsc", "yubikey"]
macos = ["security-framework"]
secure-enclave = ["macos", "swift-rs"]

[dependencies]
aes-gcm-stream = "0.2"
base64 = "0.21"
chacha20-poly1305-stream = "0.1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
flate2 = "1.0"
fs-set-times = "0.20"
hex = "0.4"
indicatif = "0.17"
openpgp-card = { version = "0.3", optional = true }
openpgp-card-pcsc = { version = "0.3", optional = true }
p256 = { version = "0.13", features = ["pem", "ecdh", "pkcs8"] }
p384 = { version = "0.13", features = ["pem", "ecdh", "pkcs8"] }
rand = "0.8"
# reqwest = { version = "0.11", features = ["blocking", "rustls", "rustls-tls"] }
rpassword = "7.3"
rsa = { version = "0.9", features = ["pem"] }
rust-crypto = "0.2"
rust_util = "0.6"
security-framework = { version = "2.9.2", features = ["OSX_10_15"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simpledateformat = "0.1"
tabled = "0.14"
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
x509-parser = "0.15"
yubikey = { version = "0.8", features = ["untested"], optional = true }
zeroize = "1.7"
swift-rs = { path = "swift-rs", optional = true }
spki = "0.7.3"
pqcrypto-kyber = "0.8.0"
pqcrypto-traits = "0.3.5"
pinentry = "0.5.0"
secrecy = "0.8.0"
dialoguer = "0.11.0"
ctrlc = "3.4.2"

[build-dependencies]
swift-rs = { path = "swift-rs", features = ["build"], optional = true }

[patch.crates-io]
rust-crypto = { git = "https://github.com/jht5945/rust-crypto.git" }

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
panic = 'abort'
strip = true
